Correção do bug da tela de estoque e colocado modo contraste nas telas de admin

--- a/Mercado/static/css/contrast.css
+++ b/Mercado/static/css/contrast.css
@@ -10,6 +10,10 @@
 .contrast section,
 .contrast main,
 .contrast aside,
+.contrast div,
+.contrast tr,
+.constrast select,
+.constrast option,
 .contrast article {
     background: black !important;
     color: white !important;
